# holmes-extractor

./: .gitignore  LICENSE  MANIFEST.in  README.adoc  README.md  SHORTREADME.md  setup.cfg  setup.py
.github/workflows/: test-holmes.yml
examples/: example_chatbot_DE_insurance.py  example_chatbot_DE_insurance_ontology.owl  example_chatbot_EN_insurance.py  example_chatbot_EN_insurance_ontology.owl  example_search_DE_law.py  example_search_DE_literature.py  example_search_EN_literature.py  example_search_EN_literature_ontology.owl  example_supervised_topic_model_EN.py
holmes_extractor/: __init__.py  about.py  classification.py  config.cfg  consoles.py  errors.py  extensive_matching.py  manager.py  matching.py  ontology.py  parsing.py  semantics.py  structural_matching.py  stuctural_matching.py  topic_matching.py
holmes_extractor/data/: derivation_DE.csv  derivation_EN.csv  derivation_de.csv  derivation_en.csv
holmes_extractor/examples/: example_chatbot_DE_insurance.py  example_chatbot_EN_insurance.py  example_search_DE_law.py  example_search_DE_literature.py  example_search_EN_literature.py  example_search_EN_literature2.py  example_supervised_topic_model_EN.py
holmes_extractor/lang/de/: language_specific_rules.py
holmes_extractor/lang/en/: language_specific_rules.py
holmes_extractor/tests/: test_errors.py  test_matching_modes.py  test_ontology.py  test_phraselet_production_DE.py  test_phraselet_production_EN.py  test_semantics_DE.py  test_semantics_EN.py  test_serialization.py  test_structural_matching_DE.py  test_structural_matching_EN.py  test_structural_matching_with_coreference_EN.py  test_supervised_topic_classification_DE.py  test_supervised_topic_classification_EN.py  test_topic_matching_DE.py  test_topic_matching_EN.py  test_word_level_matching.py  testing_utils.py
holmes_extractor/tests/common/: test_errors.py  test_matching_modes.py  test_multiprocessing.py  test_multithreading.py  test_ontology.owl  test_ontology.py  test_ontology2.owl  test_serialization.py  test_word_level_matching.py
holmes_extractor/tests/de/: test_ontology.owl  test_phraselet_production_DE.py  test_semantics_DE.py  (+3 more)
holmes_extractor/word_matching/: derivation.py  direct.py  embedding.py  entity.py  entity_embedding.py  general.py  ontology.py  question.py
tests/common/: test_cpu_gpu.py  test_errors.py  test_manager.py  test_matching_modes.py  test_multiprocessing.py  test_multithreading.py  test_ontology.py  test_ontology2.owl  test_serialization.py  test_word_level_matching.py
tests/de/: qcktest.py  test_doc_examples.py  test_doc_examples_DE.py  test_ontology.owl  test_phraselet_production_DE.py  test_questions_DE.py  test_semantics_DE.py  test_structural_matching_DE.py  test_structural_matching_with_coreference_DE.py  test_supervised_topic_classification_DE.py  test_topic_matching_DE.py
tests/en/: qcktest.py  test_doc_examples_EN.py  test_ontology.owl  test_phraselet_production_EN.py  test_questions_EN.py  test_semantics_EN.py  test_structural_matching_EN.py  test_structural_matching_with_coreference_EN.py  test_supervised_topic_classification_EN.py  test_topic_matching_EN.py
(+9 files in other folders)
