[metadata]
name = holmes-extractor
version = 3.0.1
description = Information extraction from English and German texts based on predicate logic
long_description = file: SHORTREADME.md
long_description_content_type = text/markdown
url = https://github.com/msg-systems/holmes-extractor
author = Richard Paul Hudson, msg systems ag
author_email = richard.hudson@msg.group
license = gpl-3.0
keywords= nlp, information-extraction, spacy, spacy-extension, python, machine-learning, ontology, semantics
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Healthcare Industry
    Intended Audience :: Information Technology
    Intended Audience :: Legal Industry
    Intended Audience :: Other Audience
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Natural Language :: German
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing :: Linguistic

[options]
include_package_data = True
python_requires = >=3.9
install_requires =
  spacy>=3.0.0,<3.4.0
  coreferee>=1.2.0
  rdflib
[options.package_data]
* = *.cfg, *.csv
