[metadata]
name = holmes-extractor
version = 4.0.0
description = Information extraction from English and German texts based on predicate logic
long_description = file: SHORTREADME.md
long_description_content_type = text/markdown
url = https://github.com/explosion/holmes-extractor
author = Richard Paul Hudson, Explosion AI
author_email = richard@explosion.ai
license = MIT
keywords= nlp, information-extraction, spacy, spacy-extension, python, machine-learning, ontology, semantics
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Healthcare Industry
    Intended Audience :: Information Technology
    Intended Audience :: Legal Industry
    Intended Audience :: Other Audience
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: German
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing :: Linguistic

[options]
include_package_data = True
python_requires = >=3.6,<3.11
install_requires =
  spacy>=3.1.0,<3.4.0
  coreferee>=1.2.0
  rdflib
[options.package_data]
* = *.cfg, *.csv
